--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,25 +1,39 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 20
-    buildToolsVersion "20.0.0"
+    compileSdkVersion 21
+    buildToolsVersion "21.1.1"
 
     defaultConfig {
         applicationId "com.tubb.cityindex"
         minSdkVersion 10
-        targetSdkVersion 20
+        targetSdkVersion 21
         versionCode 1
         versionName "1.0"
     }
-    buildTypes {
-        release {
-            runProguard false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+    productFlavors {
+        channel {
+            manifestPlaceholders = [ channel:"placeholder" ]
+        }
+    }
+    channels()
+}
+
+// 多渠道打包
+def channels() {
+    if (project.hasProperty("channel")) {
+        // 渠道号配置文件路径
+        def path = "./build-types/channels.txt"
+        file(path).eachLine { line ->
+            if(!line.startsWith("//")){ //剔除注释行
+                android.buildTypes.create(line, {
+                    manifestPlaceholders = [ channel:line ]
+                })
+            }
         }
     }
 }
-
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:20.0.0'
+    compile 'com.android.support:appcompat-v7:21.0.3'
 }
