--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 21
-    buildToolsVersion "21.1.2"
+    compileSdkVersion 25
+    buildToolsVersion "25.0.0"
 
     defaultConfig {
         applicationId "com.tubb.cityindex"
         minSdkVersion 10
-        targetSdkVersion 21
+        targetSdkVersion 25
         versionCode 1
         versionName "1.0"
     }
@@ -28,31 +28,46 @@ android {
         }
     }
     productFlavors {
-        channel {
-            manifestPlaceholders = [ channel:"placeholder" ]
+        develop {
+            manifestPlaceholders = [ channel:"develop" ]
         }
     }
-    channels()
+    lintOptions {
+        abortOnError false
+    }
 }
 
-// 多渠道打包
-def channels() {
-    if (project.hasProperty("channel")) {
+def disableLintOrDebugBuild(){
+    def targetTasks = project.tasks.findAll{task ->
+        def taskName = task.name
+        taskName.contains("Debug") || taskName.contains("lint") || taskName.contains("Lint") || taskName.contains("Test")
+    }
+    targetTasks.each{
+        println"disable task    :   ${it.name}"
+        it.setEnabled false
+    }
+}
+
+if (project.hasProperty('channel')) {
+    project.afterEvaluate{
+        disableLintOrDebugBuild()
+    }
+
+    configure(android.productFlavors, {
         // 渠道号配置文件路径
         def path = "./build-types/channels.txt"
         file(path).eachLine { line ->
             if(!line.startsWith("//")){ //剔除注释行
-                android.buildTypes.create(line, {
+                android.productFlavors.create(line, {
                     manifestPlaceholders = [ channel:line ]
                     signingConfig android.buildTypes.release.signingConfig
-                    minifyEnabled android.buildTypes.release.minifyEnabled
-                    proguardFiles android.buildTypes.release.proguardFiles
                 })
             }
         }
-    }
+    })
 }
+
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:21.0.3'
+    compile 'com.android.support:appcompat-v7:25.0.0'
 }
