--- a/plugin/build.gradle
+++ b/plugin/build.gradle
@@ -1,10 +1,28 @@
 apply plugin: 'groovy'
 
+repositories {
+    mavenCentral()
+}
+
+sourceSets {
+    main {
+        groovy {
+            srcDir 'src/main/groovy'
+        }
+
+        resources {
+            srcDir 'src/main/resources'
+        }
+    }
+}
+
 dependencies {
     compile gradleApi()//gradle sdk
     compile localGroovy()//groovy sdk
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+//    compile fileTree(dir: 'libs', include: ['*.jar'])
 }
 
 sourceCompatibility = "1.7"
 targetCompatibility = "1.7"
+
+apply from: './bintray.gradle'
