--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,5 @@
 apply plugin: 'com.android.application'
-//apply plugin: AppChannelPlugin
+apply plugin: 'com.tubb.multichannel'
 
 android {
     compileSdkVersion 25
@@ -38,131 +38,31 @@ android {
     }
 }
 
-//appchannel {
-//    channelFilePath 'app/build-types/channels.txt'
-//    buildProductFlavor { name ->
-//        return {
-//            manifestPlaceholders = [ channel:name ]
-//            signingConfig android.buildTypes.release.signingConfig
-//        }
-//    }
-//    disableDebugTask true
-//    disableLintTask true
-//    disableTestTask true
-//    outputDir 'publish'
-//    buildOutputFileName { project, variant ->
-//        project.name + '-' + variant.flavorName + '-' + variant.buildType.name + '-' + variant.versionName + '.apk'
-//    }
-//    buildChannel(project)
-//}
+taskmanage {
+    disableDebugTask true
+    disableLintTask true
+    disableTestTask true
+}
+
+appchannel {
+    channelFilePath 'app/build-types/channels.txt'
+    buildProductFlavor { name ->
+        return {
+            manifestPlaceholders = [ channel:name ]
+            signingConfig android.buildTypes.release.signingConfig
+        }
+    }
+    outputDir 'publish'
+    buildOutputFileName { project, variant ->
+        project.name + '-' + variant.flavorName + '-' + variant.buildType.name + '-' + variant.versionName + '.apk'
+    }
+    buildChannel(project)
+}
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:25.0.0'
 }
-
-//class AppChannelExtension{
-//    /**
-//     * channel config file path
-//     */
-//    String channelFilePath
-//    /**
-//     * custom productFlavor
-//     */
-//    Closure buildProductFlavor
-//    /**
-//     * disable debug task
-//     */
-//    boolean disableDebugTask
-//    /**
-//     * disable lint task
-//     */
-//    boolean disableLintTask
-//    /**
-//     * disable test task
-//     */
-//    boolean disableTestTask
-//    /**
-//     * apk output dir
-//     */
-//    String outputDir
-//    /**
-//     * config apk file name
-//     */
-//    Closure buildOutputFileName
-//}
-//
-//public class AppChannelPlugin implements Plugin<Project>{
-//
-//    @Override
-//    void apply(Project project) {
-//        project.extensions.create('appchannel', AppChannelExtension)
-//        project.ext {
-//            buildChannel = this.&buildChannel
-//        }
-//        project.afterEvaluate { // tasks is already fine
-//            boolean hasChannelProperty = project.hasProperty('channel')
-//            boolean disableDebugTask = project['appchannel'].disableDebugTask
-//            boolean disableLintTask = project['appchannel'].disableLintTask
-//            boolean disableTestTask = project['appchannel'].disableTestTask
-//            if (hasChannelProperty) {
-//                def targetTasks = project.tasks.findAll{ task ->
-//                    def taskName = task.name
-//                    if (disableDebugTask && taskName.contains("Debug"))
-//                        return true
-//                    if (disableLintTask && (taskName.contains("lint") || taskName.contains("Lint")))
-//                        return true
-//                    if (disableTestTask && taskName.contains("Test"))
-//                        return true
-//                    return false
-//                }
-//                targetTasks.each{
-//                    println "disable task ${it.name} by AppChannelPlugin"
-//                    it.setEnabled false
-//                }
-//            }
-//            customOutput(project)
-//        }
-//    }
-//
-//    private void customOutput(Project project) {
-//        String outputDir = project['appchannel'].outputDir
-//        def buildOutputFileName = project['appchannel'].buildOutputFileName
-//        project.android.applicationVariants.all { variant ->
-//            variant.outputs.each { output ->
-//                def sourceFile = output.outputFile
-//                String targetDir = outputDir != null ? outputDir : sourceFile.parent
-//                String targetFileName = sourceFile.name
-//                if (buildOutputFileName != null) {
-//                    targetFileName = buildOutputFileName(project, variant)
-//                }
-//                output.outputFile = new File(targetDir, targetFileName)
-//            }
-//        }
-//    }
-//
-//    public void buildChannel(Project project) {
-//        def channelFilePath = project['appchannel'].channelFilePath
-//        def buildProductFlavor = project['appchannel'].buildProductFlavor
-//        File channelFile = new File(channelFilePath)
-//        if (channelFile.isDirectory() || !channelFile.exists()) {
-//            throw new IllegalArgumentException('channelFilePath is not a valid file path!')
-//        }
-//        if (buildProductFlavor == null) {
-//            throw new IllegalArgumentException('customProductFlavor cant not be null!')
-//        }
-//        boolean hasChannelProperty = project.hasProperty('channel')
-//        if (hasChannelProperty) {
-//            project.configure(project.android.productFlavors, {
-//                channelFile.eachLine { name ->
-//                    if(!name.startsWith("#")){
-//                        project.android.productFlavors.create(name, buildProductFlavor(name))
-//                    }
-//                }
-//            })
-//        }
-//    }
-//}
 
 
 
