--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <meta-data android:name="UMENG_CHANNEL" android:value="${channel}"/>
+        <meta-data android:name="UMENG_CHANNEL" android:value="00"/>
     </application>
 
 </manifest>
