--- a/build.gradle
+++ b/build.gradle
@@ -2,20 +2,18 @@
 
 buildscript {
     repositories {
+        google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.2.1'
-        classpath 'com.tubb:multi-channel:0.0.4'
-        classpath 'com.novoda:bintray-release:0.3.4'
-        //下面两个包是用于上传的插件
-        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.0'
-        classpath 'com.github.dcendents:android-maven-gradle-plugin:1.3'//注意此处
+        classpath 'com.android.tools.build:gradle:3.1.1'
+        classpath 'io.github.tubb:multichannel:1.0.1'
     }
 }
 
 allprojects {
     repositories {
+        google()
         jcenter()
     }
 }
